<resources>
    <string name="app_name">BT8_Firebase_login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="usr">User Name</string>
    <string name="register">Register</string>
    <string name="action_home">Home</string>
    <string name="action_Favorite">Favorite</string>
    <string name="action_my_page">My Page</string>
    <string name="grp_account">Account</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="retype_pass">Retype Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="new_pass">New Password</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>